--- a/views/course-dashboard.ejs
+++ b/views/course-dashboard.ejs
@@ -81,7 +81,7 @@
       <span class="blue" style="font-size: 20px; margin-left: 20px;">
         <%= level %> Level
           <span class="orange">|</span>
-          <span id='course-duration'>xx</span>
+          <span id='course-duration'><%= duration %></span>
           <span class="orange">|</span>
           <span id='students-enrolled'>xx</span> Enrollments
           <span class="orange">|</span>
